--- a/index.html
+++ b/index.html
@@ -3,36 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Arduino Timer Display</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 50px;
-      }
-
-      #timer {
-        font-size: 48px;
-        font-weight: bold;
-        color: #333;
-      }
-
-      #status {
-        font-size: 24px;
-        color: green;
-      }
-    </style>
   </head>
   <body>
-    <div id="status">Waiting for start...</div>
-    <div id="timer">00:00.000</div>
+    <div class="container">
+      <div id="status">Waiting for start...</div>
+      <div id="timer">00:00.000</div>
+    </div>
 
     <script>
       let minutes = 0;
       let seconds = 0;
       let milliseconds = 0;
       let timerInterval = null;
-      let isTimerStopped = false;
+      let isTimerStopped = true; // Timer initially stopped
 
       function formatTime(minutes, seconds, milliseconds) {
         const formattedMinutes = String(minutes).padStart(2, "0");
@@ -53,11 +38,7 @@
 
       // Start the timer display
       function startTimer() {
-        if (timerInterval) return;
-
-        minutes = 0;
-        seconds = 0;
-        milliseconds = 0;
+        if (timerInterval) return; // Prevent multiple intervals
 
         timerInterval = setInterval(() => {
           milliseconds += 100;
@@ -100,25 +81,28 @@
           if (data.error) {
             document.getElementById("status").innerText = data.error;
           } else if (data.status === "START") {
-            if (!timerInterval && !isTimerStopped) {
+            document.getElementById("status").innerText = "Timer is running...";
+
+            // If the timer is stopped, start a new session
+            if (isTimerStopped) {
+              // Sync the frontend timer with the backend's timer values
+              minutes = data.minutes || 0;
+              seconds = data.seconds || 0;
+              milliseconds = data.milliseconds || 0;
+              updateTimerDisplay();
+
+              // Start the timer
               startTimer();
-              document.getElementById("status").innerText =
-                "Timer is running...";
+              isTimerStopped = false; // Mark that the timer is running
             }
           } else if (data.status === "STOP") {
+            // Stop the timer and sync with backend's final values
             stopTimer();
             minutes = data.minutes || 0;
             seconds = data.seconds || 0;
             milliseconds = data.milliseconds || 0;
             updateTimerDisplay();
             document.getElementById("status").innerText = "Timer stopped.";
-          } else {
-            if (isTimerStopped) {
-              minutes = data.minutes || 0;
-              seconds = data.seconds || 0;
-              milliseconds = data.milliseconds || 0;
-              updateTimerDisplay();
-            }
           }
         } catch (error) {
           console.error("Error:", error);
@@ -127,8 +111,10 @@
         }
       }
 
+      // Continuously fetch elapsed time every 500ms
       setInterval(fetchElapsedTime, 500);
 
+      // Initial fetch on page load
       fetchElapsedTime();
     </script>
   </body>
